--- a/DAYSEEKER/index.html
+++ b/DAYSEEKER/index.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+        <a class="menu"><span class="material-symbols-outlined"> menu </span></a>
+        </li>
+      <ul class="options1">
+        <li>
+          <a><span class="material-symbols-outlined"> search </span></a>
+        </li>
+        <li><a>home</a></li>
+        <li><a>shop all</p></li>
+        <li><a>tees</a></li>
+        </ul>
+        <div class="titulo">
+            <h2>Dayseeker</h2>
+        </div>
+        <ul class="options2">
+        <li><a>outerwear</a></li>
+        <li><a>contact</a></li>
+        <li><a>tour</a></li>
+        <li><a>videos</a></li>
+      </ul>
+    </header>
+    <div class="img">
+        <img src="assets/images/banner.jpg"/>
+    </div>
+    <content>
+        <h2>featured collection</h2>
+        <ul class="inventario">
+                <li>
+                  <img src="./assets/images/DyeTee.webp" alt="Dye Tee" />
+                  <h3>Dye Tee</h3>
+                  <p>40.00$</p>
+                </li>
+                <li>
+                  <img src="./assets/images/TankTee.webp" alt="Return Tee" />
+                  <h3>Return Tee</h3>
+                  <p>40.00$</p>
+                </li>
+                <li>
+                  <img src="./assets/images/ReturnTee.webp" alt="Tank Tee" />
+                  <h3>Tank Tee</h3>
+                  <p>30.00$</p>
+                </li>
+                <li>
+                  <img src="./assets/images/TourHoodie.webp" alt="Tour Hoodie" />
+                  <h3>Tour Hoodie</h3>
+                  <p>60.00$</p>
+                </li>
+                <li>
+                  <img
+                    src="./assets/images/TourReturnTee.webp"
+                    alt="Tour Return Tee"
+                  />
+                  <h3>Tour Return Tee</h3>
+                  <p>40.00$</p>
+                </li>
+                <li>
+                  <img src="./assets/images/TourTee.webp" alt="Tour Tee" />
+                  <h3>Tour Tee</h3>
+                  <p>40.00$</p>
+                </li>
+                <li>
+                  <img src="./assets/images/Vynil.webp" alt="Dark Sun Vynyl" />
+                  <h3>Dark Sun Vynil</h3>
+                  <p>35.00$</p>
+                </li>
+              </ul>
+    </content>
+    <section class="video">
+        <div>
+            <h1>Crying while you are dancing</h1>
+            <button>Watch</button>
+          </div>
+          <video muted autoplay loop>
+            <source src="./assets/videos/crying.mp4" type="video/mp4" />
+          </video>
+    </section>
+    <footer>
+        <div>
+            <h3>sign up and save</h3>
+            <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>
+            <input type="email" placeholder="Enter your email">
+            <a><span class="material-symbols-outlined"> mail </span></a>
+            <p>POWERED BY ABSOLUTE MERCH</p>
+        </div>
+    </footer>
+  </body>
 </html>
