--- a/DAYSEEKER/index.html
+++ b/DAYSEEKER/index.html
@@ -13,24 +13,24 @@
   </head>
   <body>
     <header>
-        <a class="menu"><span class="material-symbols-outlined"> menu </span></a>
+        <a href="#" class="menu"><span class="material-symbols-outlined"> menu </span></a>
         </li>
       <ul class="options1">
         <li>
-          <a><span class="material-symbols-outlined"> search </span></a>
+          <a href="#"><span class="material-symbols-outlined"> search </span></a>
         </li>
-        <li><a>home</a></li>
-        <li><a>shop all</p></li>
-        <li><a>tees</a></li>
+        <li><a href="#">home</a></li>
+        <li><a href="#">shop all</p></li>
+        <li><a href="#">tees</a></li>
         </ul>
         <div class="titulo">
             <h2>Dayseeker</h2>
         </div>
         <ul class="options2">
-        <li><a>outerwear</a></li>
-        <li><a>contact</a></li>
-        <li><a>tour</a></li>
-        <li><a>videos</a></li>
+        <li><a href="#">outerwear</a></li>
+        <li><a href="#">contact</a></li>
+        <li><a href="#">tour</a></li>
+        <li><a href="#">videos</a></li>
       </ul>
     </header>
     <div class="img">
